fix div into section, alt image

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
 </head>
 <body>
-    <div id="qr-code-container">
-        <div class="qr-code-image">
-            <img src="assets/image-qr-code.png">
-        </div>
-        <div class="container-text">
+    <section id="qr-code-container">
+        <section class="qr-code-image">
+            <img src="assets/image-qr-code.png" alt="QR Code image">
+        </section>
+        <section class="container-text">
             <h1>Improve your front-end skills by building projects</h1>
             <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-        </div>
-    </div>
+        </section>
+    </section>
 </body>
 </html>
