aria confusing fixes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" role="doc-index">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,14 +13,14 @@
 
 </head>
 <body>
-    <section id="qr-code-container">
-        <section class="qr-code-image">
+    <main id="qr-code-container" role="group">
+        <section class="qr-code-image" role="img">
             <img src="assets/image-qr-code.png" alt="QR Code image">
         </section>
-        <section class="container-text">
+        <section class="container-text" role="textbox">
             <h1>Improve your front-end skills by building projects</h1>
             <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </section>
-    </section>
+    </main>
 </body>
 </html>
