--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" role="doc-index">
+<html lang="en" role="main">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,13 +13,13 @@
 
 </head>
 <body>
-    <main id="qr-code-container" role="group">
-        <section class="qr-code-image" role="img">
-            <img src="assets/image-qr-code.png" alt="QR Code image">
+    <main id="qr-code-container" role="none">
+        <section class="qr-code-image" role="group">
+            <img src="assets/image-qr-code.png" alt="QR Code image" role="img">
         </section>
-        <section class="container-text" role="textbox">
-            <h1>Improve your front-end skills by building projects</h1>
-            <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        <section class="container-text" role="group">
+            <h1 role="heading">Improve your front-end skills by building projects</h1>
+            <p role="text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </section>
     </main>
 </body>
